@@ -44,7 +44,6 @@ wrappers =					\
   image2d_int.i					\
   image2d_int_u8.i				\
   int_u24.i					\
-  int_u32.i					\
   int_u8.i					\
   neighb2d.i					\
   point2d.i					\
