@@ -1,5 +1,14 @@
 2012-10-05  Roland Levillain  <roland@lrde.epita.fr>
 
+	No longer wrap mln::value::int_u32.
+
+	* int_u24.i: Remove.
+	* Makefile.am (wrappers): Remove int_u32.i.
+	* python/Makefile.am: No longer generate Python wrapper from
+	int_u32.i.
+
+2012-10-05  Roland Levillain  <roland@lrde.epita.fr>
+
 	Fix Swilena's build.
 
 	* image2d_int_u8.i: Use int_u24 instead of int_u32 to avoid
